pot-update (string change in textdomain 'wesnoth') regenerated doc files
git-svn-id: http://svn.gna.org/svn/wesnoth/branches/1.8@41933 75b3775d-3801-0410-9e12-e2e43121521d

--- a/doc/man/sk/wesnoth.6
+++ b/doc/man/sk/wesnoth.6
@@ -194,11 +194,11 @@ id. Frakcie sú popísané v súbore data/multiplayer.cfg.
 \fB\-\-turns=\fP\fIhodnota\fP
 nastaví počet ťahov pre danú scénu. Štandardná hodnota je \fB50\fP.
 .
-.SH "EXIT STATUS"
+.SH "NÁVRATOVÝ KÓD"
 .
-Normal exit status is 0. An exit status of 1 indicates an (SDL, video,
-fonts, etc) initialization error. An exit status of 2 indicates an error
-with the command line options.
+Normálny návratový kód je 0. Návratový kód 1 znamená chybu pri inicializácii
+(SDL, grafiky, písma, atď.). Návratový kód 2 znamená chybu v parametroch
+zadaných na príkazovom riadku.
 .
 .SH AUTOR
 .
