--- a/po/wesnoth/tl.po
+++ b/po/wesnoth/tl.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2010-03-26 15:39+0100\n"
+"POT-Creation-Date: 2010-04-02 12:40+0200\n"
 "PO-Revision-Date: 2008-02-21 10:21+0800\n"
 "Last-Translator: eve <eve_eso@yahoo.com>\n"
 "Language-Team: \n"
@@ -7383,11 +7383,11 @@ msgid "aliases:"
 msgstr ""
 
 #: src/menu_events.cpp:2200
-msgid "(A) - auth command"
+msgid "(A) - admin command"
 msgstr ""
 
-#: src/menu_events.cpp:2207
-msgid "(auth only)"
+#: src/menu_events.cpp:2207 src/menu_events.cpp:2405
+msgid "(admin only)"
 msgstr ""
 
 #: src/menu_events.cpp:2227
@@ -7547,7 +7547,7 @@ msgid "Room query."
 msgstr ""
 
 #: src/menu_events.cpp:2397
-msgid "(D) - debug only, (N) - network only, (A) - auth only"
+msgid "(D) - debug only, (N) - network only, (A) - admin only"
 msgstr ""
 
 #: src/menu_events.cpp:2403
@@ -7555,11 +7555,7 @@ msgid "(debug command)"
 msgstr ""
 
 #: src/menu_events.cpp:2404
-msgid " (network only)"
-msgstr ""
-
-#: src/menu_events.cpp:2405
-msgid " (auth only)"
+msgid "(network only)"
 msgstr ""
 
 #: src/menu_events.cpp:2429
@@ -8466,7 +8462,7 @@ msgstr "Bonus Ginto: "
 msgid "Retained Gold: "
 msgstr "Naitagong Ginto:"
 
-#: src/playsingle_controller.cpp:250
+#: src/playsingle_controller.cpp:247
 #, fuzzy
 msgid ""
 "You will start the next scenario with $gold on top of the defined minimum "
@@ -8481,7 +8477,20 @@ msgstr[1] ""
 "Magsisimula ka sa susunod na sinaryo na may $gold na mas mataas sa naka-"
 "define na panimulang minimum na ginto."
 
-#: src/playsingle_controller.cpp:258
+#: src/playsingle_controller.cpp:255
+#, fuzzy
+msgid ""
+"You will start the next scenario with the defined minimum starting gold."
+msgid_plural ""
+"You will start the next scenario with the defined minimum starting gold."
+msgstr[0] ""
+"Magsisimula ka sa susunod na sinaryo na may $gold na mas mataas sa naka-"
+"define na panimulang minimum na ginto."
+msgstr[1] ""
+"Magsisimula ka sa susunod na sinaryo na may $gold na mas mataas sa naka-"
+"define na panimulang minimum na ginto."
+
+#: src/playsingle_controller.cpp:263
 #, fuzzy
 msgid ""
 "You will start the next scenario with $gold or its defined minimum starting "
@@ -8496,15 +8505,15 @@ msgstr[1] ""
 "Magsisimula ka sa susunod na sinaryo na may $gold o ang naka-define na "
 "panimulang minimum na ginto, san man ang mas malaki."
 
-#: src/playsingle_controller.cpp:410
+#: src/playsingle_controller.cpp:415
 msgid "Game Over"
 msgstr "Laro ay Tapos"
 
-#: src/playsingle_controller.cpp:411
+#: src/playsingle_controller.cpp:416
 msgid "The game is over."
 msgstr "Ang laro ay tapos na."
 
-#: src/playsingle_controller.cpp:496
+#: src/playsingle_controller.cpp:501
 #, fuzzy
 msgid ""
 "A network disconnection has occurred, and the game\n"
@@ -8513,19 +8522,19 @@ msgstr ""
 "Nawala ang koneksyon, ang laro ay hinde na pwedeng magpatuloy. Gusto mu bang "
 "i-save ang iyong laro?"
 
-#: src/playsingle_controller.cpp:659
+#: src/playsingle_controller.cpp:664
 msgid "It is now $name|'s turn"
 msgstr "Ngayon ay turno ni $name"
 
-#: src/playsingle_controller.cpp:877
+#: src/playsingle_controller.cpp:882
 msgid "Scenario Report"
 msgstr "Ulat ng Senaryo"
 
-#: src/playsingle_controller.cpp:879
+#: src/playsingle_controller.cpp:884
 msgid "Victory"
 msgstr "Panalo"
 
-#: src/playsingle_controller.cpp:880
+#: src/playsingle_controller.cpp:885
 msgid "You have emerged victorious!"
 msgstr "Ikaw ay kumitaw na panalo!"
 
